feat: template service for api_gateway
